<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">appFotoBrujula</string>
    <string name="button_start">Iniciar appFotoBrujula</string>
    <string name="welcome">PuntoFotoBrujula</string>
    <string name="app_description">Explicación: Seleccione un punto cardinal para comenzar. </string>
    <string name="title_activity_compass">Brujula</string>
	<string name="button_north">Norte</string>
    <string name="button_east">Este</string>
    <string name="button_west">Oeste</string>
    <string name="button_south">Sur</string>
    <string name="result">Dispositivo apuntando al punto cardinal correcto.</string>
    <string name="ArrowImageDesc">Flecha navegación.</string>
</resources>